= Changelog

== `0.14.0.0`

* Frontend
  ** Updated dependencies.
  ** Automatically select the single role, when only one role is available when joining a space.
  ** Add zoom buttons to room view.
* Backend
  ** Updated dependencies.

== `0.13.4.0`

* Frontend
  ** Improve error visualization.
  ** Cancel remaining requests when switching page.

== `0.13.3.0`

* Frontend
  ** Add button to dashboard to create an initial space.
  ** Added QR-Code invite generation.

== `0.13.2.0`

* Frontend
  ** Support base url with custom path.
  ** Automatically ask to sign in on any page.
* API
  ** Add HTTP 404 "Space not found." status to some routes.
    *** `/space/join`
    *** `/space/leave`
    *** `/space/kick`
    *** `/space/user/role`
    *** `/space/view`
    *** `/desk/list`

== `0.13.1.0`

* Frontend
  ** Fixed screen to edit desks.
  ** Added URL invite generation.

== `0.13.0.1`

* Frontend
  ** Fixed screen to join spaces when space is hidden.
* API
  ** Add information to the HTTP 403 status response body of `/space/view`.
* Backend
  ** Improved reservation email notification.

== `0.13.0.0`

* API
  ** Alter messages in 403 "missing permission" status slightly.
* Database
  ** Rename table `space_role` to `role`.
  ** Rename table `space_role_permission` to `role_permission`.

== `0.12.0.0`

* Frontend
  ** Space logos can be edited in your settings.
  ** Space logos are displayed on the dashboard.
  ** Fixed compatibility issues with Chrome 129.
* Database
  ** Add new column `picture_jpeg` to the `space` table.
* API
  ** Add `/space/picture` route to change a space picture.
    *** Use GET to download pictures.
    *** Use PUT to upload a picture replacing the old one.
    *** Use DELETE to delete the current picture.
  ** Add new field `desks` to route `/space/list` to count desks.

== `0.11.1.0`

* API
  ** Add new field `users` to route `/space/list` to count users.
* Frontend
  ** Improve space overview on dashboard.
* Backend